[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hhs-medicaid-fraud"
version = "0.1.0"
description = "ML anomaly detection pipeline for HHS Medicaid provider fraud from spending data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb",
    "numpy",
    "pandas",
    "scikit-learn",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "ruff>=0.5",
    "black>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.5",
    "black>=24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hhs_medicaid_fraud"]